--- a/seminars2017.html
+++ b/seminars2017.html
@@ -61,9 +61,9 @@
 
 <tr>
                          <td Width="10" style="List-style-type:Disc:">&#149</td>
-                         <td width="190"><a href="seminars2017/jan05.html" target="_blank"> January 05, 2016
-                         <td width="300">Sanjiban Santra, CIMAT, Mexico
-
+                         <td width="190"><a href="seminars2017/jan05.html" target="_blank"> January 05, 2016</td>
+                         <td width="300">Sanjiban Santra (CIMAT, Mexico)<br>
+				 On some fourth order equations associated to Physics</td>
 </tr>
 
 
