--- a/seminars2017.html
+++ b/seminars2017.html
@@ -46,24 +46,24 @@
 
 <tr>
                          <td Width="10" style="List-style-type:Disc:">&#149</td>
-                         <td width="190"><a href="seminars2017/jan09.html" target="_blank"> January 09, 2016
-                         <td width="300">E Palsson, Virginia Tech, USA
-
+                         <td width="190"><a href="seminars2017/jan09.html" target="_blank"> January 09, 2017</td>
+                         <td width="300">Eyvindur A. Palsson (Virginia Tech, USA)<br>
+				 <i>Finite point configurations</i></td>
 </tr>
 
 
 <tr>
                          <td Width="10" style="List-style-type:Disc:">&#149</td>
-                         <td width="190"><a href="seminars2017/jan06.html" target="_blank"> January 06, 2016
-                         <td width="300">Jayadev Athreya, University of Washington
-
+                         <td width="190"><a href="seminars2017/jan06.html" target="_blank"> January 06, 2017</td>
+                         <td width="300">Jayadev Athreya (University of Washington, USA)<br>
+				 <i>Siegel-Veech transforms are in L2</i></td>
 </tr>
 
 <tr>
                          <td Width="10" style="List-style-type:Disc:">&#149</td>
-                         <td width="190"><a href="seminars2017/jan05.html" target="_blank"> January 05, 2016</td>
+                         <td width="190"><a href="seminars2017/jan05.html" target="_blank"> January 05, 2017</td>
                          <td width="300">Sanjiban Santra (CIMAT, Mexico)<br>
-				 On some fourth order equations associated to Physics</td>
+				 <i>On some fourth order equations associated to Physics</i></td>
 </tr>
 
 
