--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-8">
     <img src="department.jpg" alt="" width="100%">
-  <div class="col-md-6">
+  <div class="col-md-6 text-justify">
     <h3>Research</h3>
     The department is active in research in most areas of pure and applied mathematics,
     including algebra and  number theory, analysis,
@@ -16,7 +16,7 @@
         <li><a href="pubs.html">Research Publications</a></li>
       </ul>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 text-justify">
     <h3>Teaching</h3>
     The department has a Ph.D. programme as well as an integrated Ph.D. programme. The department participates
     in the undergraduate programme of IISc: undergraduate students can
