--- a/seminars2008/dec17.html
+++ b/seminars2008/dec17.html
@@ -24,7 +24,7 @@ Bangalore 560 012</font></b></p>
     :</b> </font>
     </p></td>
     <td align="left" height="35" width="100%">
-    <pre><font face="Verdana">Dr. Apporva Khare</font></pre>
+    <pre><font face="Verdana">Dr. Apoorva Khare</font></pre>
     </td>
   </tr>
     <tr>
@@ -33,7 +33,7 @@ Bangalore 560 012</font></b></p>
     <td align="left" height="35" valign="top" width="2%">
     <b><font face="Verdana" size="2">:</font></b></td>
     <td align="left" height="35" valign="top" width="100%">
-    <font face="Verdana" size="2">U.C. Riverside</font></td>
+    <font face="Verdana" size="2">University of California, Riverside</font></td>
   </tr>
   <tr>
     <td align="left" height="31" valign="top" width="16%">
@@ -89,7 +89,7 @@ Bangalore 560 012</font></b></p>
     :</b> </font>
     </p></td>
     <td align="left" height="35" width="100%">
-    <pre><font face="Verdana">Dec 17,2008 (Wednesday)</font></pre>
+    <pre><font face="Verdana">Dec 17, 2008 (Wednesday)</font></pre>
     </td>
   </tr>
     <tr>
