--- a/seminars2008.html
+++ b/seminars2008.html
@@ -44,7 +44,7 @@
 							   <tr>
 							   <td Width="10" style="List-style-type:Disc:">&#149</td>
 							   <td width="190"><a href="seminars2008/dec17.html" target="_blank"> December 17, 2008
-							   <td width="300">Dr. Apporva Khare, U.C. Riverside
+							   <td width="300">Dr. Apoorva Khare, University of California, Riverside
 							   </tr>
                               
 							  <tr>
