--- a/seminars2008/dec17.html
+++ b/seminars2008/dec17.html
@@ -115,7 +115,7 @@ Bangalore 560 012</font></b></p>
     infinite-dimensional algebras that are similar to semisimple Lie algebras as 
     well as symplectic reflection algebras. Infinitesimal Hecke algebras are 
     deformations of semidirect product Lie algebras, and we study two families 
-    over $\mathcal{sl}(2)$ and $\mathcal{gl}(2)$. Both of them have a triangular decomposition and a 
+    over $\mathfrak{sl}(2)$ and $\mathfrak{gl}(2)$. Both of them have a triangular decomposition and a 
     nontrivial center, which allows us to define and study the BGG Category $\mathcal{O}$ 
     over them - including a (central character) block decomposition, and an 
     analog of Duflo's Theorem about primitive ideals. We then discuss certain 
