--- a/faculty.html
+++ b/faculty.html
@@ -24,7 +24,7 @@ title: Faculty Members
           <strong>Phone :</strong> +91-80 2293 {{ fac.phone-ext}}
         </div>
         <div>
-          <strong>Office :</strong> Mathematics, Room {{ fac.office}}
+          <strong>Office :</strong> Room {{ fac.office}}
         </div>
         <div>
           <strong>UserID :</strong> {{fac.user-id}}
