--- a/catalogue.html
+++ b/catalogue.html
@@ -10,6 +10,7 @@ title: Course Catalogue
 
   {% capture lnk %}{{ site.baseurl }}/all-courses/{{  course.code  | downcase | replace: ' ', '' }}.html{% endcapture  %}
   <h4>  <a href={{ lnk }}>{{ course.code }}: {{ course.title }} </a>
+    ({% if course.credits %}{{ course.credits }}{% else %}3:0{% endif %})
   </h4>
 {% if course.prereqs %}
 <h4> Pre-requisites : </h4>
