leave form scripts

--- a/auto_forms/PROForm.html
+++ b/auto_forms/PROForm.html
@@ -2,6 +2,22 @@
 ---
 <blockquote> </blockquote>
 
+<script type="text/javascript" src="Form_files/jspdf_005.js"></script>
+
+<script type="text/javascript" src="Form_files/adler32cs.js"></script>
+
+<script type="text/javascript" src="Form_files/FileSaver.js"></script>
+
+<script type="text/javascript" src="Form_files/BlobBuilder.js"></script>
+
+<script type="text/javascript" src="Form_files/jspdf_002.js"></script>
+
+<script type="text/javascript" src="Form_files/jspdf.js"></script>
+
+<script type="text/javascript" src="Form_files/jspdf_004.js"></script>
+
+<script type="text/javascript" src="Form_files/jspdf_003.js"></script>
+
 <center>
 <img src="Form_files/IISclogo.jpg" height="150" width="150"><br>
 <p class="style1" align="center">INDIAN INSTITUTE OF SCIENCE BANGALORE - 560012</p>
