--- a/auto_forms/LeaveForm.html
+++ b/auto_forms/LeaveForm.html
@@ -2,6 +2,22 @@
 ---
 <blockquote> </blockquote>
 
+<script type="text/javascript" src="Form_files/jspdf_005.js"></script>
+
+<script type="text/javascript" src="Form_files/adler32cs.js"></script>
+
+<script type="text/javascript" src="Form_files/FileSaver.js"></script>
+
+<script type="text/javascript" src="Form_files/BlobBuilder.js"></script>
+
+<script type="text/javascript" src="Form_files/jspdf_002.js"></script>
+
+<script type="text/javascript" src="Form_files/jspdf.js"></script>
+
+<script type="text/javascript" src="Form_files/jspdf_004.js"></script>
+
+<script type="text/javascript" src="Form_files/jspdf_003.js"></script>
+
 <div class="form-group">
 
 <center>
