--- a/seminars-all.html
+++ b/seminars-all.html
@@ -40,6 +40,16 @@ title: Seminars
   <h3>By Year</h3>
   <ul>
     <li><a href="Seminars2017">2017</a></li>
+    <li><a href="Seminars2016">2016</a></li>
+    <li><a href="Seminars2015">2015</a></li>
+    <li><a href="Seminars2014">2014</a></li>
+    <li><a href="Seminars2013">2013</a></li>
+    <li><a href="Seminars2012">2012</a></li>
+    <li><a href="Seminars2011">2011</a></li>
+    <li><a href="Seminars2010">2010</a></li>
+    <li><a href="Seminars2009">2009</a></li>
+    <li><a href="Seminars2008">2008</a></li>
+    <li><a href="Seminars2007">2007</a></li>
   </ul>
 </div>
 
