--- a/seminars-all.html
+++ b/seminars-all.html
@@ -39,17 +39,17 @@ title: Seminars
 <div class="" id = "tables">
   <h3>By Year</h3>
   <ul>
-    <li><a href="Seminars2017">2017</a></li>
-    <li><a href="Seminars2016">2016</a></li>
-    <li><a href="Seminars2015">2015</a></li>
-    <li><a href="Seminars2014">2014</a></li>
-    <li><a href="Seminars2013">2013</a></li>
-    <li><a href="Seminars2012">2012</a></li>
-    <li><a href="Seminars2011">2011</a></li>
-    <li><a href="Seminars2010">2010</a></li>
-    <li><a href="Seminars2009">2009</a></li>
-    <li><a href="Seminars2008">2008</a></li>
-    <li><a href="Seminars2007">2007</a></li>
+    <li><a href="Seminars2017.html">2017</a></li>
+    <li><a href="Seminars2016.html">2016</a></li>
+    <li><a href="Seminars2015.html">2015</a></li>
+    <li><a href="Seminars2014.html">2014</a></li>
+    <li><a href="Seminars2013.html">2013</a></li>
+    <li><a href="Seminars2012.html">2012</a></li>
+    <li><a href="Seminars2011.html">2011</a></li>
+    <li><a href="Seminars2010.html">2010</a></li>
+    <li><a href="Seminars2009.html">2009</a></li>
+    <li><a href="Seminars2008.html">2008</a></li>
+    <li><a href="Seminars2007.html">2007</a></li>
   </ul>
 </div>
 
