--- a/computerfaqs.html
+++ b/computerfaqs.html
@@ -1,6 +1,7 @@
 ---
-title : Frequently asked questions 
 ---
+
+<h3> Frequently asked questions </h3> <br>
 
 <ul>
   <li><a href = "{{ site.baseurl }}/sshinfo.html"> How can I access the IISc network from outside ? </a></li>
