make web page updates, webmaster

--- a/contact-us.html
+++ b/contact-us.html
@@ -17,7 +17,7 @@
 chairman.math[at]iisc[dot]ac[dot]in
 </address>
 
-  <a href="mailto:surender@iisc.ac.in">Contact
+  <a href="mailto:webmaster.math@iisc.ac.in">Contact
               the Administrator</a>
 </div>
 <div style="float: right">
