--- a/computerfaqs.html
+++ b/computerfaqs.html
@@ -6,5 +6,5 @@
 <ul>
   <li><a href = "{{ site.baseurl }}/sshinfo.html"> How can I access the IISc network from outside ? </a></li>
 <li><a href = "{{ site.baseurl }}/makewebpage.html">How can I make a webpage hosted on the maths server ? </a></li>
-<li><a href = "{{ site.baseurl }}/gmailalias.html"> Can one forward one's iisc email to gmail ? What about setting up a gmail alias ?</a></li>
+<li><a href = "{{ site.baseurl }}/gmailalias.html"> Can one forward one's iisc email to some other service (e.g. gmail)? </a></li>
  </ul>
