--- a/course-schedule.html
+++ b/course-schedule.html
@@ -1,5 +1,4 @@
 ---
 title: Course Schedule
 ---
-<iframe width="100%" height="400" style="margin-top: 1cm;  margin-bottom: 1cm;"
-src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSw64EYZtyps_dX1QHLENgg4y0i9w2ovSZOn5LpHg5elmXNS8IwZIJretMp1wu2c7HdWvsxVrTKVTnb/pubhtml?widget=true&amp;headers=false""></iframe>
+<iframe width="100%" height="346" frameborder="0" scrolling="no" src="https://indianinstituteofscience-my.sharepoint.com/personal/gadgil_iisc_ac_in/_layouts/15/WopiFrame.aspx?sourcedoc={5d6ba8cd-bf63-4121-ba62-9b9cac8fe8db}&action=embedview&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True"></iframe>
