--- a/course-schedule.html
+++ b/course-schedule.html
@@ -1,4 +1,5 @@
 ---
 title: Course Schedule
 ---
-<iframe width="100%" height="346" frameborder="0" scrolling="no" src="https://indianinstituteofscience-my.sharepoint.com/personal/gadgil_iisc_ac_in/_layouts/15/WopiFrame.aspx?sourcedoc={5d6ba8cd-bf63-4121-ba62-9b9cac8fe8db}&action=embedview&wdAllowInteractivity=False&ActiveCell='Sheet1'!A1&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True"></iframe>
+<iframe width="100%" height="346" frameborder="0" scrolling="no"
+src="https://indianinstituteofscience-my.sharepoint.com/:x:/r/personal/gadgil_iisc_ac_in/_layouts/15/WopiFrame.aspx?sourcedoc=%7B5d6ba8cd-bf63-4121-ba62-9b9cac8fe8db%7D&&action=embedview&wdAllowInteractivity=False&ActiveCell=%27Sheet1%27!A1&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True"></iframe>
