courses update, seminars 2018

--- a/seminars-all.html
+++ b/seminars-all.html
@@ -39,6 +39,7 @@ title: Seminars
 <div class="" id = "tables">
   <h3>By Year</h3>
   <ul>
+    <li><a href="Seminars2018.html">2018</a></li>
     <li><a href="Seminars2017.html">2017</a></li>
     <li><a href="Seminars2016.html">2016</a></li>
     <li><a href="Seminars2015.html">2015</a></li>
