--- a/seminars-all.html
+++ b/seminars-all.html
@@ -12,7 +12,7 @@ title: Seminars
   <div class="col-md-11"> -->
   <h5><strong> Title: </strong> <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a> </h5>
  <h5>  <strong>Speaker: </strong> {{sem.speaker}} </h5>
-  <h5>  <strong>Date: </strong>{{ sem.date | date_to_long_string }} </h5>
+  <h5>  <strong>Date: </strong>{{ sem.date | date: "%a, %d %b %Y" }} </h5>
   {% if sem.time %}
   <h5>  <strong>Time: </strong>{{ sem.time }} </h5>
   {% endif %}
