--- a/course-schedule.html
+++ b/course-schedule.html
@@ -2,4 +2,4 @@
 title: Course Schedule
 ---
 <iframe width="100%" height="560" frameborder="0" scrolling="no"
-src="https://docs.google.com/spreadsheets/d/1GtV7wz8ch9j_hQIbea3PntbaS3zJg9F_nFxHxZBZQUc/edit?usp=sharing"></iframe>
+src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSw64EYZtyps_dX1QHLENgg4y0i9w2ovSZOn5LpHg5elmXNS8IwZIJretMp1wu2c7HdWvsxVrTKVTnb/pubhtml?gid=1563680562&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
