--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="course-list.html">Courses</a></li>
         <li><a href="degprog-phd.html">Ph.D. programme</a></li> for students with Masters degrees
         <li><a href="degprog-intphd.html">Integrated Ph.D. programme</a></li> for students with Bachelor degrees
-        <li><a href="http://www.iisc.ernet.in/ug/">Undergraduate programme</a></li>
+        <li><a href="http://www.iisc.ac.in/ug/">Undergraduate programme</a></li>
       </ul>
   </div>
 
