--- a/pubs.html
+++ b/pubs.html
@@ -50,7 +50,7 @@ title: Publications - Dept of Mathematics, IISc
 {% for paper in yearpubs %}
   <li>
     {% if paper.author %} {{ paper.author }}{% else %} {{paper.editor}} (Ed.){% endif %},
-    <em>{{ paper.title }}</em>, {{ paper.journal }} {{ paper.booktitle }}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}.
+    <em>{{ paper.title }}</em>, {{ paper.journal }} {{ paper.booktitle }} {{ paper.note }}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}.
   </li>
 {% endfor %}
 </ol>
