course schedule updated, not yet new pages

--- a/courses2016-17.html
+++ b/courses2016-17.html
@@ -8,7 +8,7 @@ title: Courses for 2016-17
 {% include semester-courses.html %}
 
 {% assign semester = site.data.courses.jan2017 %}
-<div class="col-md-8 col-offset-md-1">
+<!-- <div class="col-md-8 col-offset-md-1"> -->
 <h3 class="text-center">Courses for the semester January-April 2017</h3>
 
 {% include semester-courses.html %}
