--- a/course-list.html
+++ b/course-list.html
@@ -3,14 +3,14 @@ title: Courses
 ---
 <p>
   <ul>
-     <li><h4><a href="#aug2017">August 2017 courses</a></h4></li>
-     <li><h4><a href="#jan2018">January 2018 courses</a></h4></li>
+     <li><h4><a href="#aug2018">August 2018 courses</a></h4></li>
+     <li><h4><a href="#jan2019">January 2019 courses</a></h4></li>
   </ul>
 </p>
 
-<div id ="aug2017">
-{% assign semester = site.data.courses.aug2017 %}
-<h3 class="text-center">Courses for the semester August-December 2017</h3>
+<div id ="aug2018">
+{% assign semester = site.data.courses.aug2018 %}
+<h3 class="text-center">Courses for the semester August-December 2018</h3>
 
 {% include semester-courses.html %}
 
@@ -18,23 +18,24 @@ title: Courses
 
 <p style="margin-top: 40px; margin-bottom: 40px">
   <ul>
-    <li><h4><a href="#aug2017">August 2017 courses</a></h4></li>
-    <li><h4><a href="#jan2018">January 2018 courses</a></h4></li>
+    <li><h4><a href="#aug2018">August 2018 courses</a></h4></li>
+    <li><h4><a href="#jan2019">January 2019 courses</a></h4></li>
   </ul>
 </p>
 
-<div id ="jan2018">
-{% assign semester = site.data.courses.jan2018 %}
-<h3 class="text-center">Courses for the semester January-April 2018</h3>
+<div id ="jan2019">
+{% assign semester = site.data.courses.jan2019 %}
+<h3 class="text-center">Courses for the semester January-April 2019</h3>
 
 {% include semester-courses.html %}
 
 </div>
 
 <div>
-<p style="margin-top: 40px">  
+<p style="margin-top: 40px">
  <h3>Earlier semesters</h3>
  <ul>
+   <li><a href="courses2017-18.html"> Academic Year 2017-18</a></li>
     <li><a href="courses2016-17.html"> Academic Year 2016-17</a></li>
     <li> <a href="courses2015AD.html"> August-December 2015</a></li>
     <li> <a href="courses2015JA.html">January-April 2015</a></li>
