--- a/research-areas.html
+++ b/research-areas.html
@@ -20,14 +20,14 @@ title: Research Areas
 
 <h3 id="analysis">Analysis</h3>
 <p>
-  <ul> 
+  <ul>
     <li><h4 id="differential-equations-ak-nandakumaran-thirupati-gudi">Differential Equations (<a href="http://math.iisc.ac.in/~gudi/">Thirupathi Gudi</a>, <a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>)</h4>
         <p> Homogenization of partial differential equations, controllability, viscosity solutions. Numerical methods for partial differential equations.</p> </li>
     <li><h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharyya</a>, <a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>)</h4>
         <p> Hilbert modules, multivariable operator theory, holomorphic-geometry methods for the study of commuting operator tuples.</p></li>
     <li><h4 id="harmonic-analysis-s-thangavelu-e-k-narayanan">Harmonic Analysis (<a href="http://math.iisc.ac.in/~naru/">E. K. Narayanan</a>, <a href="http://math.iisc.ac.in/~veluma/">S. Thangavelu</a>)</h4>
         <p> Analysis on the Heisenberg group and generalisations such as H-type groups, analysis on symmetric spaces of non-compact type and on semisimple Lie groups, spectral multipliers of Laplcians and sub-Laplacians on these spaces, integral geometry on homogeneous spaces and relations with complex analysis.</p>
-    <li> <h4 id="matrix"> Positivity and Matrix Analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices.</p></li> 
+    <li> <h4 id="matrix"> Positivity and Matrix Analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices.</p></li>
     <li> <h4 id="several-complex-variables-kaushal-verma-gautam-bharali-vamsi-pritham-pingali">Several Complex Variables (<a href="http://math.iisc.ac.in/~bharali/">Gautam Bharali</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>, <a href="http://math.iisc.ac.in/~kverma/">Kaushal Verma</a>)</h4>
          <p> Holomorphic mappings, holomorphic interpolation, Ohsawa-Takegoshi type extension theorems. Invariant metrics: estimates, metric geometry of hyperbolic domains. Convexity, finite-type domains. Pluripotential theory and holomorphic dynamical systems.</p></li></li>
   </ul>
@@ -77,25 +77,10 @@ Coxeter groups, root systems, structure theory of Borcherds&ndash;Kac&ndash;Mood
 <h3 id="probab">Probability and its Applications </h3>
 <p>
   <ul>
-    <li><h4 id="probability-and-stochastic-processes-manjunath-krishnapur-srikanth-k-iyer-mrinal-k-ghosh">Probability theory and Stochastic Processes (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~manju/">Manjunath Krishnapur</a>)</h4>
+    <li><h4 id="probability-and-stochastic-processes-manjunath-krishnapur-srikanth-k-iyer-mrinal-k-ghosh">Probability theory and Stochastic Processes (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~manju/">Manjunath Krishnapur</a>, <a href="https://sites.google.com/site/sanchayansenss/">Sanchayan Sen</a>) </h4>
         <p>Random matrix theory, zeroes of analytic functions. Diffusion and related topics: first passage time problems for anomalous diffusion, measure-valued diffusion, branching processes. Stochastic dynamic games, stability and control of stochastic systems, applications to manufacturing systems. Stochastic differential equations. Stochastic geometry, random geometric graphs.</p></li>
     <li><h4 id="time-series-analysis-govindan-rangarajan-srikanth-k-iyer">Time Series Analysis (<a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>, )</h4>
         <p>Time series and long-memory processes. Application of time series analysis techniques to neuroscience, especially to brain-machine interface; applications to geophysics.</p></li>
     <li><h4 id="finance">Mathematical Finance (<a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>) </h4><p> Option pricing, portfolio optimization, interest rate models, credit risk models.</p></li>
   </ul>
 </p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
