--- a/seminars-all.html
+++ b/seminars-all.html
@@ -10,7 +10,9 @@ title: Seminars
 <!-- <div class="row">
 
   <div class="col-md-11"> -->
-  <h5><strong> Title: </strong> <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a> </h5>
+  <h5><strong> Title: </strong> <a
+    href="{% if sem.website %}{{ sem.website }}{% else %}{{ site.baseurl}}{{ sem.url }}.html{% endif %}"
+    >{{ sem.title }}</a> </h5>
  <h5>  <strong>Speaker: </strong> {{sem.speaker}} </h5>
   <h5>  <strong>Date: </strong>{{ sem.date | date: "%a, %d %b %Y" }} </h5>
   {% if sem.time %}
