--- a/seminars-all.html
+++ b/seminars-all.html
@@ -10,9 +10,11 @@ title: Seminars
 <!-- <div class="row">
 
   <div class="col-md-11"> -->
-  <h5><strong> Title: </strong> <a
-    href="{% if sem.website %}{{ sem.website }}{% else %}{{ site.baseurl}}{{ sem.url }}.html{% endif %}"
-    >{{ sem.title }}</a> </h5>
+  <h5><strong> Title: </strong>
+    {% if sem.series %}<a
+    href="{{sem.website}}" target="_blank"
+    >{{sem.series}}: </a>{% endif %}
+    <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a> </h5>
  <h5>  <strong>Speaker: </strong> {{sem.speaker}} </h5>
   <h5>  <strong>Date: </strong>{{ sem.date | date: "%a, %d %b %Y" }} </h5>
   {% if sem.time %}
