--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <li>
  <div><strong> Title: </strong>
    {% if sem.series %}<a
-    href="{{sem.website}}" target="_blank"
+    href="{{sem.website}}" target="_blank" class="text-success"
     >{{sem.series}}: </a>{% endif %}
    <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a> </div>
 <div>  <strong>Speaker: </strong> {{sem.speaker}} </div>
@@ -98,7 +98,7 @@
  <li>
   <div><strong> Title: </strong>
     {% if sem.series %}<a
-    href="{{sem.website}}" target="_blank"
+    href="{{sem.website}}" target="_blank" class="text-success"
     >{{sem.series}}: </a>{% endif %}
     <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a> </div>
  <div>  <strong>Speaker: </strong> {{sem.speaker}} </div>
