final examination schedule

--- a/exam-schedule-dec-2018.html
+++ b/exam-schedule-dec-2018.html
@@ -10,15 +10,15 @@ classes were conducted. If the instructor has used a mixed slot such as Monday 2
 11.30, then the first of these decides the examination date.
 
 <ul>
-  <li>Forenoon: 9 AM ‐ 12 Noon</li>
-  <li>Afternoon: 2 PM ‐ 5 PM</li>
+  <li><strong> Forenoon:</strong> 9 AM ‐ 12 Noon</li>
+  <li><strong>Afternoon:</strong> 2 PM ‐ 5 PM</li>
 </ul>
 
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <td><strong>ACTUAL time of the Course</strong></td>
-      <td> <strong>Examination time</strong> </td>
+      <td class="text-center"><strong>ACTUAL time of the Course</strong></td>
+      <td class="text-center"> <strong>Examination time</strong> </td>
     </tr>
   </thead>
 <tr><td>    MWF 8; MWF 8‐9.30; MWF 8.30‐10 </td><td>  Thursday : November 28 Forenoon </td></tr>
@@ -38,3 +38,19 @@ classes were conducted. If the instructor has used a mixed slot such as Monday 2
 <tr><td>    TTh 10; TTh 10‐11.30; TTh 10.30‐12</td><td> Monday : December 10 Forenoon </td></tr>
 <tr><td>    TTh 4; TTh 3.30‐5, MWF 8.30‐10</td><td> Monday : December 10 Afternoon </td></tr>
 </table>
+
+<ol>
+  <li>
+    <strong>Last date of classes: Friday, 23rd November 2018</strong>
+  </li>
+  <li>The specified examination date cannot be changed without the written concurrence of all
+registrants of the course. Scheduling the examination outside the period from November 29 to
+December 10 ,2018 needs the permission of the SCC, and can be allowed only after the specified last
+date of classes.</li>
+<li>
+  <strong>Venue:</strong> The final examination is to be held in the same lecture room where the classes are held. In
+case there is a need for additional space, individual instructors can please get in touch with
+Academic Section (Unit II) (Phone: 2937) on or before November 23, 2018, so as to enable allotment
+of an additional or a more spacious lecture room.
+</li>
+</ol>
