schedule finalized, embedded

--- a/course-schedule.html
+++ b/course-schedule.html
@@ -1,6 +1,5 @@
 ---
 title: Course Schedule
 ---
-<iframe width="100%" height="480" frameborder="0" scrolling="no"
-src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR0iPQm5heJEHtukfzwjXvr6vEjct3p6uB71UPRyL03c0MKo_ALcb7RETQOIwv37JDhwL2oCjwtEMkr/pubhtml?gid=1284522909&amp;single=true&amp;widget=true&amp;headers=false">
-</iframe>
+
+<iframe width="100%" height="480" frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSopS3KfDL2rQw_RFt4NyNscfQBE5Y38JvdYD3C3Egq90YwkbixQuFI11xWcr3zDjPk-wuhPKpdeikw/pubhtml?widget=true&amp;headers=false"></iframe>
