shiga seminar, dattab discrete

--- a/research-areas.html
+++ b/research-areas.html
@@ -36,9 +36,10 @@ title: Research Areas
 <h3 id="Discrete-mathematics">Discrete Mathematics</h3>
 <p>
   <ul>
-<li><h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer"> Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>,  <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>)</h4>
-    <p> Algebraic and enumerative combinatorics,  random geometric graphs, graph limits, symmetric functions, Schur polynomials, determinantal identities,
-Coxeter groups, root systems, structure theory of Borcherds&ndash;Kac&ndash;Moody algebras and connections to algebraic graph theory, lattice polytopes and polyhedra.</p></li>
+<li><h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer"> Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~dattab/">Basudeb Datta</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>,  <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>)</h4>
+    <p> Algebraic and enumerative combinatorics,  random geometric graphs, graph limits, symmetric functions, Schur polynomials, determinantal identities;
+Coxeter groups, root systems, structure theory of Borcherds&ndash;Kac&ndash;Moody algebras and connections to algebraic graph theory, lattice polytopes and polyhedra;
+Combinatorial aspects of simplicial complexes, Tessellation and tiling problems.</p></li>
 </ul>
 </p>
 
