--- a/ug-alumni.html
+++ b/ug-alumni.html
@@ -31,7 +31,7 @@ title: Undergraduate Degrees Awarded
    <li><p style="margin-top: 15px; margin-bottom: -3px"> <b>Name:</b> <em>{{ deg.name }}</em> </p></li>
    <li> <b>Degree:</b> {{deg.degree }} </li>
    {% if deg.present %}
-   <li> <b>Present Position:</b>  {{ deg.present}} </li>
+   <li> <b>Next position:</b>  {{ deg.present}} </li>
  {% endif %}
 
  {% endfor %}
