correction to schedule

--- a/exam-schedule-apr-2019.html
+++ b/exam-schedule-apr-2019.html
@@ -40,17 +40,14 @@ classes were conducted. If the instructor has used a mixed slot such as Monday 2
 </table>
 
 <ol>
-  <li>
-    <strong>Last date of classes: Friday, 23rd November 2018</strong>
-  </li>
-  <li>The specified examination date cannot be changed without the written concurrence of all
-registrants of the course. Scheduling the examination outside the period from November 29 to
-April 10 ,2018 needs the permission of the SCC, and can be allowed only after the specified last
-date of classes.</li>
-<li>
-  <strong>Venue:</strong> The final examination is to be held in the same lecture room where the classes are held. In
-case there is a need for additional space, individual instructors can please get in touch with
-Academic Section (Unit II) (Phone: 2937) on or before November 23, 2018, so as to enable allotment
-of an additional or a more spacious lecture room.
-</li>
+  <li>In case the time-slot of your course does not correspond to any of those mentioned above, you may have to choose an appropriate
+schedule, in consultation with the students registered for your course and the same is to be intimated to the Academic Section (Unit II )
+on or before April 19, 2019.</li>
+<li> The final examination is to be held in the same lecture room where the classes are held. In case there is a need for additional space,
+individual instructors can please get in touch with Academic Section (Unit II) (Phone: 2937) on or before April 19, 2019, so as to
+enable allotment of an additional or a more spacious lecture room.</li>
+<li><strong> Last date of class: Friday, April 12, 2019.</strong></li>
+<li> The specified examination date cannot be changed without the written concurrence of all registrants of the course. Scheduling the
+examination outside the period April 22-May 01, 2019 needs the permission of the SCC, and can be allowed only after the last date of
+class.</li>
 </ol>
