--- a/pubs-by-author.html
+++ b/pubs-by-author.html
@@ -9,57 +9,36 @@ title: Publications - Dept of Mathematics, IISc
 
 
 <div class="row">
-  <!-- <div class="col-md-1 bg-info">
-    <div class="navbar navbar-fixed-bottom">
-      <div class="container">
-      <strong> By year</strong>
-      {% assign years = site.data.pubs | group_by: "year" | sort: 'name' | reverse %}
-      <ul>
-        {% for y in years  limit: 15 %}
-        <li> <a href="#{{y.name}}"> {{y.name}} </a> </li>
-        {% endfor %}
-        <li><a href="#{{years[15].name}}">{{years[15].name}}  and earlier</a> </li>
-      </ul>
 
-      <h4> <a href="#">Top</a></h4>
-      <p>&nbsp;</p>
-    </div>
-    </div>
-
-  </div> -->
   <div class="col-md-12">
-    <h2> Publications (by year) </h2>
+    <h2> Publications (by author) </h2>
 
-{% assign years = site.data.pubs | group_by: "year" | sort: 'name' | reverse %}
 
-<ul class="list-inline">
-  {% for y in years  limit: 15 %}
-  <li> <a href="#{{y.name}}"> {{y.name}} </a> </li>
+<ul>
+  {% for fac in site.data.faculty %}
+<li><h4>
+<a class="" data-toggle="collapse" href="#{{fac.name | slugify}}" aria-expanded="false" aria-controls="{{fac.name | slugify}}">
+  {{fac.name}}
+</a></h4>
+
+<div class="collapse" id="{{fac.name | slugify}}">
+  <ol>
+  {% for paper in site.data.pubs %}
+  {% assign authors = paper.author | split: " and " %}
+  {% if authors contains fac.author-name %}
+    <li>
+      {% if paper.author %} {{ paper.author }}{% else %} {{paper.editor}} (Ed.){% endif %},
+      <em>{{ paper.title }}</em>, {{ paper.journal }} {{ paper.booktitle }} {{ paper.note }}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}{{ paper.article }}.
+      {% if paper.url %}(<a href="{{ paper.url }}" target="_blank">Article</a>){% endif %}
+      {% if paper.mrnumber %}(<a href="https://mathscinet.ams.org/mathscinet/search/publdoc.html?pg1=MR&s1=MR{{ paper.mrnumber }}" target="_blank">Review</a>){% endif %}
+    </li>
+    {% endif %}
   {% endfor %}
-  <li><a href="#{{years[15].name}}">{{years[15].name}}  and earlier</a> </li>
+  </ol>
+</div>
+</li>
+{% endfor %}
 </ul>
-
-{% for y in years %}
-
-
-<h4 id ="{{y.name}}">Year: {{y.name}}</h4>
-
-<ol>
-{% assign yearpubs = y.items | sort: 'author' %}
-{% for paper in yearpubs %}
-{% assign authors = paper.author | split: " and " %}
-{% if authors contains "Datta, Basudeb" %}
-  <li>
-    {% if paper.author %} {{ paper.author }}{% else %} {{paper.editor}} (Ed.){% endif %},
-    <em>{{ paper.title }}</em>, {{ paper.journal }} {{ paper.booktitle }} {{ paper.note }}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}{{ paper.article }}.
-    {% if paper.url %}(<a href="{{ paper.url }}" target="_blank">Article</a>){% endif %}
-    {% if paper.mrnumber %}(<a href="https://mathscinet.ams.org/mathscinet/search/publdoc.html?pg1=MR&s1=MR{{ paper.mrnumber }}" target="_blank">Review</a>){% endif %}
-  </li>
-  {% endif %}
-{% endfor %}
-</ol>
-
-{% endfor %}
 </div>
 
 </div>
