--- a/pubs-by-author.html
+++ b/pubs-by-author.html
@@ -12,6 +12,7 @@ title: Publications - Dept of Mathematics, IISc
 
   <div class="col-md-12">
     <h2> Publications (by author) </h2>
+    <p>Note that these are only the publications by current faculty members of the department since they joined the department.</p>
 
 {% assign years = site.data.pubs | group_by: "year" | sort: 'name' | reverse %}
 
